<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/activity_about_dest"
        android:title="@string/about_dest_option"
        android:textSize="24sp">
    </item>
</menu>